changed trial text to include all letters from the alphabet

--- a/main_HMM.ipynb
+++ b/main_HMM.ipynb
@@ -29,20 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " wv lkzmqve wd pkkmp dn fk gzkdde mtru qtdnmqdwr gzkdde mtru qjj duk dwmk wv yzqvrk qvh pgqwv wd qjj hkgkvhp gzkptmqfje nv pnrwqj ptfdjkdwkp duqd ent uqak dn fk yzkvru nz pgqvwpu dn tvhkzpdqvh wv wdqje cue cntjh ent kakv fndukz cukv qvh unc mtru dn dwg wp q otkpdwnv duqd uqp fkkv akswvl awpwdnzp dn ktzngk ynz qp jnvl qp gkngjk uqak fkkv dzqakjjwvl qzntvh duk rnvdwvkvd ntdpwhk dukwz ncv rntvdze wd pkkmp kakv ktzngkqvp hnv d bvnc duk qvpckz qrrnzhwvl dn vkc gnjjwvl fe entlna wv pws kt rntvdzwkp fzwdqwv qvh duk tp cukzk qp mnpd awpwdnzp bvnc ftd mqe fk zkjtrdqvd dn qrbvncjkhlk lzqdtwdwkp mqe mqbk tg mnzk duqv uqjy entz cqwdgkzpnv p wvrnmk ktzngkqvp qzk hkkgje hwawhkh nv dwggwvl wv zkpdqtzqvdp ynz ksqmgjk ny zkpgnvhkvdp wv lkzmqve dnjh duk gnjjpdkz duke degwrqjje dwggkh qjmnpd duk pqmk qp duk tp wv duk tb cukzk qv ngdwnvqj pkzawrk ruqzlk ny qfntd wp tptqjje wvrjthkh pqwh duke jkyd q lzqdtwde duk ywltzk wv pgqwv cukzk pkzawrk wp nydkv wvrjthkh wv zkpdqtzqvd fwjjp ftd hwvkzp rqv jkqak ngdwnvqj dwgp cqp cuwjk wv yzqvrk cukzk kakze gzwrk nv q zkpdqtzqvd mkvt qjzkqhe wvrjthkp ynz pkzawrk ny gkngjk pqwh duke lkvkzqjje dwggkh nv dng kakv wv pckhkv cukzk dwgp qzk lkvkzqjje vnd ksgkrdkh duk ywltzk cqp ftd nvje ny wdqjwqvp pqwh duke cntjh degwrqjje jkqak q lzqdtwde qydkz q mkqj ntd cwdu q zqdukz lzkqdkz gzngnzdwnv qhmwddwvl duke vkakz jkyd q rkvd q pdqzdjwvl ny zkpgnvhkvdp wv duk tp unckakz qvh ny lkzmqvp fe yqz duk mnpd wv ktzngk rnvykppkh duke cntjh dwg pnmkdwmkp nz nydkv kakv wy duk pkzawrk cqp dkzzwfjk wvhwrqdwvl duqd ynz pnmk dwggwvl wp vnd qfntd otqjwde ny pkzawrk qd qjj duk ywvhwvlp ny duk ptzake cwjj rnmk qp q ptzgzwpk wv lkzmqve q rntvdze duqd hnkp vnd lkvkzqjje duwvb ny wdpkjy qp q vqdwnv ny uqgge hwpdzwftdnzp\n"
+      " in germany it seems to be pretty much automatic pretty much all the time in france and spain it all depends presumably just on social subtleties that you have to be french or spanish to understand in italy why would you even bother when and how much to tip is a question that has been vexing visitors to europe for as long as people have been travelling around the continent outside their own country it seems even europeans don t know the answer according to new polling by yougov in six eu countries britain and the us where as most visitors know but may be reluctant to acknowledge gratuities may make up more than half your waitperson s income europeans are deeply divided on tipping in restaurants for example of respondents in germany told the pollster they typically tipped almost the same as the us in the uk where an optional service charge of about is usually included said they left a gratuity the figure in spain where service is often included in restaurant bills but diners can leave optional tips was while in france where every price on a restaurant menu already includes for service of people said they generally tipped on top even in sweden where tips are generally not expected the figure was but only of italians said they would typically leave a gratuity after a meal out with a rather greater proportion admitting they never left a cent a startling of respondents in the us however and of germans by far the most in europe confessed they would tip sometimes or often even if the service was terrible indicating that for some tipping is not about quality of service at all the findings of the survey will come as a surprise in germany a country that does not generally think of itself as a nation of happy distributors\n",
+      " bc djiemch bx qjjeq xk nj pijxxh ezus mzxkemxbu pijxxh ezus mvv xsj xbej bc rimcuj mcy qpmbc bx mvv yjpjcyq pijqzemnvh lzqx kc qkubmv qznxvjxbjq xsmx hkz smtj xk nj rijcus ki qpmcbqs xk zcyjiqxmcy bc bxmvh fsh fkzvy hkz jtjc nkxsji fsjc mcy skf ezus xk xbp bq m azjqxbkc xsmx smq njjc tjgbcd tbqbxkiq xk jzikpj rki mq vkcd mq pjkpvj smtj njjc ximtjvvbcd mikzcy xsj ukcxbcjcx kzxqbyj xsjbi kfc ukzcxih bx qjjeq jtjc jzikpjmcq ykc x wckf xsj mcqfji muukiybcd xk cjf pkvvbcd nh hkzdkt bc qbg jz ukzcxibjq nibxmbc mcy xsj zq fsjij mq ekqx tbqbxkiq wckf nzx emh nj ijvzuxmcx xk muwckfvjydj dimxzbxbjq emh emwj zp ekij xsmc smvr hkzi fmbxpjiqkc q bcukej jzikpjmcq mij yjjpvh ybtbyjy kc xbppbcd bc ijqxmzimcxq rki jgmepvj kr ijqpkcyjcxq bc djiemch xkvy xsj pkvvqxji xsjh xhpbumvvh xbppjy mvekqx xsj qmej mq xsj zq bc xsj zw fsjij mc kpxbkcmv qjitbuj usmidj kr mnkzx bq zqzmvvh bcuvzyjy qmby xsjh vjrx m dimxzbxh xsj rbdzij bc qpmbc fsjij qjitbuj bq krxjc bcuvzyjy bc ijqxmzimcx nbvvq nzx ybcjiq umc vjmtj kpxbkcmv xbpq fmq fsbvj bc rimcuj fsjij jtjih pibuj kc m ijqxmzimcx ejcz mvijmyh bcuvzyjq rki qjitbuj kr pjkpvj qmby xsjh djcjimvvh xbppjy kc xkp jtjc bc qfjyjc fsjij xbpq mij djcjimvvh ckx jgpjuxjy xsj rbdzij fmq nzx kcvh kr bxmvbmcq qmby xsjh fkzvy xhpbumvvh vjmtj m dimxzbxh mrxji m ejmv kzx fbxs m imxsji dijmxji pikpkixbkc myebxxbcd xsjh cjtji vjrx m ujcx m qxmixvbcd kr ijqpkcyjcxq bc xsj zq skfjtji mcy kr djiemcq nh rmi xsj ekqx bc jzikpj ukcrjqqjy xsjh fkzvy xbp qkejxbejq ki krxjc jtjc br xsj qjitbuj fmq xjiibnvj bcybumxbcd xsmx rki qkej xbppbcd bq ckx mnkzx azmvbxh kr qjitbuj mx mvv xsj rbcybcdq kr xsj qzitjh fbvv ukej mq m qzipibqj bc djiemch m ukzcxih xsmx ykjq ckx djcjimvvh xsbcw kr bxqjvr mq m cmxbkc kr smpph ybqxibnzxkiq\n"
      ]
     }
    ],
    "source": [
-    "hidden_sequence = \"people of western europe a landing was made this morning on the coast of france by troops kangaroo jokes quasi vile xilophone zenit \"\n",
-    "hidden_sequence = \" in germany it seems to be pretty much automatic pretty much all the time in france and spain it all depends presumably on social subtleties that you have to be french or spanish to understand in italy why would you even bother when and how much to tip is a question that has been vexing visitors to europe for as long as people have been travelling around the continent outside their own country it seems even europeans don t know the answer according to new polling by yougov in six eu countries britain and the us where as most visitors know but may be reluctant to acknowledge gratuities may make up more than half your waitperson s income europeans are deeply divided on tipping in restaurants for example of respondents in germany told the pollster they typically tipped almost the same as the us in the uk where an optional service charge of about is usually included said they left a gratuity the figure in spain where service is often included in restaurant bills but diners can leave optional tips was while in france where every price on a restaurant menu already includes for service of people said they generally tipped on top even in sweden where tips are generally not expected the figure was but only of italians said they would typically leave a gratuity after a meal out with a rather greater proportion admitting they never left a cent a startling of respondents in the us however and of germans by far the most in europe confessed they would tip sometimes or often even if the service was terrible indicating that for some tipping is not about quality of service at all the findings of the survey will come as a surprise in germany a country that does not generally think of itself as a nation of happy distributors\"\n",
+    "# hidden_sequence = \"people of western europe a landing was made this morning on the coast of france by troops kangaroo jokes quasi vile xilophone zenit \"\n",
+    "hidden_sequence = \" in germany it seems to be pretty much automatic pretty much all the time in france and spain it all depends presumably just on social subtleties that you have to be french or spanish to understand in italy why would you even bother when and how much to tip is a question that has been vexing visitors to europe for as long as people have been travelling around the continent outside their own country it seems even europeans don t know the answer according to new polling by yougov in six eu countries britain and the us where as most visitors know but may be reluctant to acknowledge gratuities may make up more than half your waitperson s income europeans are deeply divided on tipping in restaurants for example of respondents in germany told the pollster they typically tipped almost the same as the us in the uk where an optional service charge of about is usually included said they left a gratuity the figure in spain where service is often included in restaurant bills but diners can leave optional tips was while in france where every price on a restaurant menu already includes for service of people said they generally tipped on top even in sweden where tips are generally not expected the figure was but only of italians said they would typically leave a gratuity after a meal out with a rather greater proportion admitting they never left a cent a startling of respondents in the us however and of germans by far the most in europe confessed they would tip sometimes or often even if the service was terrible indicating that for some tipping is not about quality of service at all the findings of the survey will come as a surprise in germany a country that does not generally think of itself as a nation of happy distributors\"\n",
     "# hidden_sequence = \" hello banana xilophone key queue zebra cock pussy tits dandy fart though jolly world mum \"\n",
     "\n",
     "cipher_generator = CipherGenerator()\n",
@@ -50,12 +51,13 @@
     "encoder = TextEncoder()\n",
     "observed_sequence = encoder.encode_text(hidden_sequence, cipher=cipher)\n",
     "\n",
+    "print(hidden_sequence)\n",
     "print(observed_sequence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,12 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.HMM_functions import Baum_Welch\n",
     "\n",
+    "\n",
+    "# We initialize B to be uniform on all character to character conversions\n",
+    "#  with the last row and column (corresponding to the space) are initialized to 0 and 1 only for \" \" emitting \" \"\n",
     "B_start = np.zeros((27, 27)) + 1 / 26\n",
     "B_start[:, -1] = np.zeros(27)\n",
     "B_start[-1, :] = np.zeros(27)\n",
@@ -117,40 +122,22 @@
     "    B_start=B_start,\n",
     "    pi=pm.matrix[-1, :],\n",
     "    observed=observed_,\n",
-    "    maxIter=1,\n",
+    "    maxIter=20\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emission.sum(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emission.sum(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' wv lzzmqve ww pzzmp wn fz gzzwwe mtru qtwnmqwwr gzzwwe mtru qjj wuz wwmz wv yzqvrz qvh pgqwv ww qjj hzgzvhp gzzptmqfje nv pnrwqj ptfwjzwwzp wuqw ent uqaz wn fz yzzvru nz pgqvwpu wn tvhzzpwqvh wv wwqje cue cntjh ent zazv fnwuzz cuzv qvh unc mtru wn wwg wp q otzpwwnv wuqw uqp fzzv azswvl awpwwnzp wn ztzngz ynz qp jnvl qp gzngjz uqaz fzzv wzqazjjwvl qzntvh wuz rnvwwvzvw ntwpwhz wuzwz ncv rntvwze ww pzzmp zazv ztzngzqvp hnv w bvnc wuz qvpczz qrrnzhwvl wn vzc gnjjwvl fe entlna wv pws zt rntvwzwzp fzwwqwv qvh wuz tp cuzzz qp mnpw awpwwnzp bvnc ftw mqe fz zzjtrwqvw wn qrbvncjzhlz lzqwtwwwzp mqe mqbz tg mnzz wuqv uqjy entz cqwwgzzpnv p wvrnmz ztzngzqvp qzz hzzgje hwawhzh nv wwggwvl wv zzpwqtzqvwp ynz zsqmgjz ny zzpgnvhzvwp wv lzzmqve wnjh wuz gnjjpwzz wuze wegwrqjje wwggzh qjmnpw wuz pqmz qp wuz tp wv wuz tb cuzzz qv ngwwnvqj pzzawrz ruqzlz ny qfntw wp tptqjje wvrjthzh pqwh wuze jzyw q lzqwtwwe wuz ywltzz wv pgqwv cuzzz pzzawrz wp nywzv wvrjthzh wv zzpwqtzqvw fwjjp ftw hwvzzp rqv jzqaz ngwwnvqj wwgp cqp cuwjz wv yzqvrz cuzzz zazze gzwrz nv q zzpwqtzqvw mzvt qjzzqhe wvrjthzp ynz pzzawrz ny gzngjz pqwh wuze lzvzzqjje wwggzh nv wng zazv wv pczhzv cuzzz wwgp qzz lzvzzqjje vnw zsgzrwzh wuz ywltzz cqp ftw nvje ny wwqjwqvp pqwh wuze cntjh wegwrqjje jzqaz q lzqwtwwe qywzz q mzqj ntw cwwu q zqwuzz lzzqwzz gzngnzwwnv qhmwwwwvl wuze vzazz jzyw q rzvw q pwqzwjwvl ny zzpgnvhzvwp wv wuz tp unczazz qvh ny lzzmqvp fe yqz wuz mnpw wv ztzngz rnvyzppzh wuze cntjh wwg pnmzwwmzp nz nywzv zazv wy wuz pzzawrz cqp wzzzwfjz wvhwrqwwvl wuqw ynz pnmz wwggwvl wp vnw qfntw otqjwwe ny pzzawrz qw qjj wuz ywvhwvlp ny wuz ptzaze cwjj rnmz qp q ptzgzwpz wv lzzmqve q rntvwze wuqw hnzp vnw lzvzzqjje wuwvb ny wwpzjy qp q vqwwnv ny uqgge hwpwzwftwnzp'"
+       "' in germany it seems to be pretty muzh automatiz pretty muzh all the time in franze and spain it all depends presumably qust on sozial subtleties that you have to be frenzh or spanish to understand in italy why would you even bother when and how muzh to tip is a auestion that has been vexing visitors to europe for as long as people have been travelling around the zontinent outside their own zountry it seems even europeans don t wnow the answer azzording to new polling by yougov in six eu zountries britain and the us where as most visitors wnow but may be reluztant to azwnowledge gratuities may mawe up more than half your waitperson s inzome europeans are deeply divided on tipping in restaurants for example of respondents in germany told the pollster they typizally tipped almost the same as the us in the uw where an optional servize zharge of about is usually inzluded said they left a gratuity the figure in spain where servize is often inzluded in restaurant bills but diners zan leave optional tips was while in franze where every prize on a restaurant menu already inzludes for servize of people said they generally tipped on top even in sweden where tips are generally not expezted the figure was but only of italians said they would typizally leave a gratuity after a meal out with a rather greater proportion admitting they never left a zent a startling of respondents in the us however and of germans by far the most in europe zonfessed they would tip sometimes or often even if the servize was terrible indizating that for some tipping is not about auality of servize at all the findings of the survey will zome as a surprise in germany a zountry that does not generally thinw of itself as a nation of happy distributors'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,6 +146,52 @@
     "# go back to letters to see the results\n",
     "mapping = find_mapping(emission.argmax(axis=1))\n",
     "numbers_to_string(observed_sequence, invert_mapping(mapping))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 13, 20, 24,  9, 17,  3, 18,  1, 11, 19, 21,  4,  2, 10, 15, 11,\n",
+       "        8, 16, 23, 25, 19,  5,  6,  7, 20, 26])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emission.argmax(axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.4204242 , 0.59426932, 0.33614214, 0.40815961, 0.68610573,\n",
+       "       0.30533622, 0.24128589, 0.41049294, 0.41553163, 0.4884047 ,\n",
+       "       0.36529307, 0.34065969, 0.39944858, 0.73295376, 0.3321016 ,\n",
+       "       0.18357834, 0.81663523, 0.48004038, 0.55108382, 0.56548568,\n",
+       "       0.49292914, 0.66443631, 0.23235109, 0.91711861, 0.58556676,\n",
+       "       0.43420175, 1.        ])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emission.max(axis = 1)"
    ]
   },
   {
@@ -215,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
