reconstruct most likeliy sequence using viterbi

--- a/main_HMM.ipynb
+++ b/main_HMM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
      "output_type": "stream",
      "text": [
       " in germany it seems to be pretty much automatic pretty much all the time in france and spain it all depends presumably just on social subtleties that you have to be french or spanish to understand in italy why would you even bother when and how much to tip is a question that has been vexing visitors to europe for as long as people have been travelling around the continent outside their own country it seems even europeans don t know the answer according to new polling by yougov in six eu countries britain and the us where as most visitors know but may be reluctant to acknowledge gratuities may make up more than half your waitperson s income europeans are deeply divided on tipping in restaurants for example of respondents in germany told the pollster they typically tipped almost the same as the us in the uk where an optional service charge of about is usually included said they left a gratuity the figure in spain where service is often included in restaurant bills but diners can leave optional tips was while in france where every price on a restaurant menu already includes for service of people said they generally tipped on top even in sweden where tips are generally not expected the figure was but only of italians said they would typically leave a gratuity after a meal out with a rather greater proportion admitting they never left a cent a startling of respondents in the us however and of germans by far the most in europe confessed they would tip sometimes or often even if the service was terrible indicating that for some tipping is not about quality of service at all the findings of the survey will come as a surprise in germany a country that does not generally think of itself as a nation of happy distributors\n",
-      " bc djiemch bx qjjeq xk nj pijxxh ezus mzxkemxbu pijxxh ezus mvv xsj xbej bc rimcuj mcy qpmbc bx mvv yjpjcyq pijqzemnvh lzqx kc qkubmv qznxvjxbjq xsmx hkz smtj xk nj rijcus ki qpmcbqs xk zcyjiqxmcy bc bxmvh fsh fkzvy hkz jtjc nkxsji fsjc mcy skf ezus xk xbp bq m azjqxbkc xsmx smq njjc tjgbcd tbqbxkiq xk jzikpj rki mq vkcd mq pjkpvj smtj njjc ximtjvvbcd mikzcy xsj ukcxbcjcx kzxqbyj xsjbi kfc ukzcxih bx qjjeq jtjc jzikpjmcq ykc x wckf xsj mcqfji muukiybcd xk cjf pkvvbcd nh hkzdkt bc qbg jz ukzcxibjq nibxmbc mcy xsj zq fsjij mq ekqx tbqbxkiq wckf nzx emh nj ijvzuxmcx xk muwckfvjydj dimxzbxbjq emh emwj zp ekij xsmc smvr hkzi fmbxpjiqkc q bcukej jzikpjmcq mij yjjpvh ybtbyjy kc xbppbcd bc ijqxmzimcxq rki jgmepvj kr ijqpkcyjcxq bc djiemch xkvy xsj pkvvqxji xsjh xhpbumvvh xbppjy mvekqx xsj qmej mq xsj zq bc xsj zw fsjij mc kpxbkcmv qjitbuj usmidj kr mnkzx bq zqzmvvh bcuvzyjy qmby xsjh vjrx m dimxzbxh xsj rbdzij bc qpmbc fsjij qjitbuj bq krxjc bcuvzyjy bc ijqxmzimcx nbvvq nzx ybcjiq umc vjmtj kpxbkcmv xbpq fmq fsbvj bc rimcuj fsjij jtjih pibuj kc m ijqxmzimcx ejcz mvijmyh bcuvzyjq rki qjitbuj kr pjkpvj qmby xsjh djcjimvvh xbppjy kc xkp jtjc bc qfjyjc fsjij xbpq mij djcjimvvh ckx jgpjuxjy xsj rbdzij fmq nzx kcvh kr bxmvbmcq qmby xsjh fkzvy xhpbumvvh vjmtj m dimxzbxh mrxji m ejmv kzx fbxs m imxsji dijmxji pikpkixbkc myebxxbcd xsjh cjtji vjrx m ujcx m qxmixvbcd kr ijqpkcyjcxq bc xsj zq skfjtji mcy kr djiemcq nh rmi xsj ekqx bc jzikpj ukcrjqqjy xsjh fkzvy xbp qkejxbejq ki krxjc jtjc br xsj qjitbuj fmq xjiibnvj bcybumxbcd xsmx rki qkej xbppbcd bq ckx mnkzx azmvbxh kr qjitbuj mx mvv xsj rbcybcdq kr xsj qzitjh fbvv ukej mq m qzipibqj bc djiemch m ukzcxih xsmx ykjq ckx djcjimvvh xsbcw kr bxqjvr mq m cmxbkc kr smpph ybqxibnzxkiq\n"
+      " qz wklftzm qu skkfs uh jk ylkuum fgdv tguhftuqd ylkuum fgdv txx uvk uqfk qz oltzdk tzc sytqz qu txx ckykzcs ylksgftjxm bgsu hz shdqtx sgjuxkuqks uvtu mhg vtek uh jk olkzdv hl sytzqsv uh gzcklsutzc qz qutxm avm ahgxc mhg kekz jhuvkl avkz tzc vha fgdv uh uqy qs t pgksuqhz uvtu vts jkkz ekrqzw eqsquhls uh kglhyk ohl ts xhzw ts ykhyxk vtek jkkz ultekxxqzw tlhgzc uvk dhzuqzkzu hgusqck uvkql haz dhgzulm qu skkfs kekz kglhyktzs chz u izha uvk tzsakl tddhlcqzw uh zka yhxxqzw jm mhgwhe qz sqr kg dhgzulqks jlqutqz tzc uvk gs avklk ts fhsu eqsquhls izha jgu ftm jk lkxgdutzu uh tdizhaxkcwk wltugquqks ftm ftik gy fhlk uvtz vtxo mhgl atquyklshz s qzdhfk kglhyktzs tlk ckkyxm cqeqckc hz uqyyqzw qz lksutgltzus ohl krtfyxk ho lksyhzckzus qz wklftzm uhxc uvk yhxxsukl uvkm umyqdtxxm uqyykc txfhsu uvk stfk ts uvk gs qz uvk gi avklk tz hyuqhztx skleqdk dvtlwk ho tjhgu qs gsgtxxm qzdxgckc stqc uvkm xkou t wltugqum uvk oqwglk qz sytqz avklk skleqdk qs houkz qzdxgckc qz lksutgltzu jqxxs jgu cqzkls dtz xktek hyuqhztx uqys ats avqxk qz oltzdk avklk keklm ylqdk hz t lksutgltzu fkzg txlktcm qzdxgcks ohl skleqdk ho ykhyxk stqc uvkm wkzkltxxm uqyykc hz uhy kekz qz sakckz avklk uqys tlk wkzkltxxm zhu krykdukc uvk oqwglk ats jgu hzxm ho qutxqtzs stqc uvkm ahgxc umyqdtxxm xktek t wltugqum toukl t fktx hgu aquv t ltuvkl wlktukl ylhyhluqhz tcfquuqzw uvkm zkekl xkou t dkzu t sutluxqzw ho lksyhzckzus qz uvk gs vhakekl tzc ho wklftzs jm otl uvk fhsu qz kglhyk dhzoksskc uvkm ahgxc uqy shfkuqfks hl houkz kekz qo uvk skleqdk ats ukllqjxk qzcqdtuqzw uvtu ohl shfk uqyyqzw qs zhu tjhgu pgtxqum ho skleqdk tu txx uvk oqzcqzws ho uvk sglekm aqxx dhfk ts t sglylqsk qz wklftzm t dhgzulm uvtu chks zhu wkzkltxxm uvqzi ho quskxo ts t ztuqhz ho vtyym cqsulqjguhls\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.80999782e-02, 9.22150531e-03, 7.18584308e-03, 6.82098237e-03,\n",
+       "       3.75680960e-03, 7.32056810e-03, 4.03529608e-03, 1.29248004e-02,\n",
+       "       1.19011015e-02, 8.04594734e-04, 1.60062246e-03, 6.07119302e-03,\n",
+       "       9.71968276e-03, 4.78543749e-03, 1.00901766e-02, 5.64976658e-03,\n",
+       "       5.00407226e-04, 3.27975627e-03, 1.55191960e-02, 2.64728801e-02,\n",
+       "       1.90821330e-03, 1.18694153e-03, 1.20175189e-02, 6.10252715e-06,\n",
+       "       4.03494401e-03, 3.42680371e-05, 4.02150671e-02])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm.matrix[-1,] # last entry should be 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' in germany it seems to be pretty muzh automatiz pretty muzh all the time in franze and spain it all depends presumably qust on sozial subtleties that you have to be frenzh or spanish to understand in italy why would you even bother when and how muzh to tip is a auestion that has been vexing visitors to europe for as long as people have been travelling around the zontinent outside their own zountry it seems even europeans don t wnow the answer azzording to new polling by yougov in six eu zountries britain and the us where as most visitors wnow but may be reluztant to azwnowledge gratuities may mawe up more than half your waitperson s inzome europeans are deeply divided on tipping in restaurants for example of respondents in germany told the pollster they typizally tipped almost the same as the us in the uw where an optional servize zharge of about is usually inzluded said they left a gratuity the figure in spain where servize is often inzluded in restaurant bills but diners zan leave optional tips was while in franze where every prize on a restaurant menu already inzludes for servize of people said they generally tipped on top even in sweden where tips are generally not expezted the figure was but only of italians said they would typizally leave a gratuity after a meal out with a rather greater proportion admitting they never left a zent a startling of respondents in the us however and of germans by far the most in europe zonfessed they would tip sometimes or often even if the servize was terrible indizating that for some tipping is not about auality of servize at all the findings of the survey will zome as a surprise in germany a zountry that does not generally thinw of itself as a nation of happy distributors'"
+       "' in germany it seems to be pretty muzh automatiz pretty muzh all the time in franze and spain it all depends presumably qust on sozial subtleties that you have to be frenzh or spanish to understand in italy why would you even bother when and how muzh to tip is a puestion that has been vexing visitors to europe for as long as people have been travelling around the zontinent outside their own zountry it seems even europeans don t inow the answer azzording to new polling by yougov in six eu zountries britain and the us where as most visitors inow but may be reluztant to azinowledge gratuities may maie up more than half your waitperson s inzome europeans are deeply divided on tipping in restaurants for example of respondents in germany told the pollster they typizally tipped almost the same as the us in the ui where an optional servize zharge of about is usually inzluded said they left a gratuity the figure in spain where servize is often inzluded in restaurant bills but diners zan leave optional tips was while in franze where every prize on a restaurant menu already inzludes for servize of people said they generally tipped on top even in sweden where tips are generally not expezted the figure was but only of italians said they would typizally leave a gratuity after a meal out with a rather greater proportion admitting they never left a zent a startling of respondents in the us however and of germans by far the most in europe zonfessed they would tip sometimes or often even if the servize was terrible indizating that for some tipping is not about puality of servize at all the findings of the survey will zome as a surprise in germany a zountry that does not generally thini of itself as a nation of happy distributors'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([12, 13, 20, 24,  9, 17,  3, 18,  1, 11, 19, 21,  4,  2, 10, 15, 11,\n",
-       "        8, 16, 23, 25, 19,  5,  6,  7, 20, 26])"
+       "array([19,  9,  3,  2, 10, 14, 22, 21, 16,  1,  4, 23,  5, 25,  7, 24,  1,\n",
+       "       11, 18, 20,  6,  4,  0, 17, 12,  3, 26])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,21 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.4204242 , 0.59426932, 0.33614214, 0.40815961, 0.68610573,\n",
-       "       0.30533622, 0.24128589, 0.41049294, 0.41553163, 0.4884047 ,\n",
-       "       0.36529307, 0.34065969, 0.39944858, 0.73295376, 0.3321016 ,\n",
-       "       0.18357834, 0.81663523, 0.48004038, 0.55108382, 0.56548568,\n",
-       "       0.49292914, 0.66443631, 0.23235109, 0.91711861, 0.58556676,\n",
-       "       0.43420175, 1.        ])"
+       "array([0.76416448, 0.6953035 , 0.81601868, 0.65422467, 0.84788296,\n",
+       "       0.95856387, 0.58475064, 0.47847948, 0.86043554, 0.99000191,\n",
+       "       0.69044509, 0.91787417, 0.84001789, 0.95805879, 0.83567188,\n",
+       "       0.46896162, 0.99999697, 0.74797484, 0.85973221, 0.71462454,\n",
+       "       0.97052657, 0.99705692, 0.74792096, 0.99942987, 0.94525551,\n",
+       "       0.99542234, 1.        ])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,13 +222,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.HMM_functions import Viterbi\n",
     "\n",
-    "pmax, phi = Viterbi(A=pm.matrix, B=emission, observed=observed_)"
+    "pmax, phi = Viterbi(A=pm.matrix, B=emission, observed=observed_) # Questo va aggiustato"
    ]
   },
   {
