--- a/viterbi.ipynb
+++ b/viterbi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,12 @@
     "        tmp = np.zeros((n_states, n_states))\n",
     "        for j in range(n_states):\n",
     "            for k in range(n_states):\n",
-    "                tmp[j, k] = A[j, k] * B[k, observed[i + 1]]\n",
+    "                if B[k, observed[i + 1]] == 0:\n",
+    "                    tmp_B = np.min(B[B != 0])\n",
+    "                else:\n",
+    "                    tmp_B = np.log(B[k, observed[i + 1]])\n",
+    "\n",
+    "                tmp[j, k] = np.log(A[j, k]) + tmp_B\n",
     "        f[i] = tmp\n",
     "\n",
     "    return f"
@@ -26,20 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.24, 0.35],\n",
-       "        [0.72, 0.05]],\n",
+       "array([[[-1.42711636, -1.04982212],\n",
+       "        [-0.32850407, -2.99573227]],\n",
        "\n",
-       "       [[0.24, 0.35],\n",
-       "        [0.72, 0.05]]])"
+       "       [[-1.42711636, -1.04982212],\n",
+       "        [-0.32850407, -2.99573227]]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +71,14 @@
     "\n",
     "    f = compute_f(A, B, observed)\n",
     "\n",
-    "    pmax[0] = np.max(np.log(f[0]), axis=0)\n",
+    "    pmax[0] = np.max((f[0]), axis=0)\n",
     "    phi[0] = np.argmax(f[0], axis=0)\n",
     "\n",
     "    for i in range(1, n_nodes - 1):\n",
-    "        tmp = (np.log(f[i]).T + pmax[i-1]).T\n",
+    "        tmp = ((f[i]).T + pmax[i - 1]).T\n",
     "\n",
     "        pmax[i] = np.max(tmp, axis=0)\n",
-    "        \n",
+    "\n",
     "        phi[i] = np.argmax(tmp, axis=0)\n",
     "\n",
     "    return pmax, phi"
@@ -100,6 +105,115 @@
    ],
    "source": [
     "Viterbi(A, B, observed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = np.zeros((2, 2, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.3 0.2]\n",
+      "  [0.1 0.4]]\n",
+      "\n",
+      " [[0.1 0.5]\n",
+      "  [0.2 0.2]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f[0] = np.array([[0.3, 0.2], [0.1, 0.4]])\n",
+    "f[1] = np.array([[0.1, 0.5], [0, 0.2]])\n",
+    "print(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Viterbi(f):\n",
+    "    n_nodes = 3\n",
+    "    n_states = 2\n",
+    "\n",
+    "    pmax = np.zeros((n_nodes - 1, n_states))\n",
+    "    phi = np.zeros((n_nodes - 1, n_states))\n",
+    "\n",
+    "    pmax[0] = np.max((f[0]), axis=0)\n",
+    "    phi[0] = np.argmax(f[0], axis=0)\n",
+    "\n",
+    "    for i in range(1, n_nodes - 1):\n",
+    "        tmp = ((f[i]).T + pmax[i - 1]).T\n",
+    "\n",
+    "        pmax[i] = np.max(tmp, axis=0)\n",
+    "\n",
+    "        phi[i] = np.argmax(tmp, axis=0)\n",
+    "\n",
+    "    return pmax, phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmax, phi = Viterbi(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reconstruct(pmax, phi):\n",
+    "    \"\"\"\n",
+    "    Ricostruisce tutti i most probable, per ora fa schifo ma sembra funzionare, da ricontrollare\n",
+    "    \"\"\"\n",
+    "\n",
+    "    reconstruction = np.empty(len(pmax)+1)\n",
+    "    reconstruction[-1] = np.argmax(pmax[-1])\n",
+    "    curr = np.argmax(pmax[-1])\n",
+    "    for i in range(1, len(pmax)-1):\n",
+    "        reconstruction[-1-i] = phi[-1-i][curr]\n",
+    "        curr = phi[i][curr]\n",
+    "    \n",
+    "    return reconstruction\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 1.])"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reconstruct(pmax, phi)"
    ]
   }
  ],
